--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   -webkit-font-smoothing: antialiased;
-  /* font-family: "Space Grotesk", sans-serif; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -47,7 +47,7 @@ h6 {
 }
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 4px;
   background: transparent;
 }
 
@@ -70,7 +70,7 @@ h6 {
 }
 
 html {
-  scrollbar-width: 1px;
+  scrollbar-width: thin;
   scrollbar-color: #2a2a2a transparent;
 }
 
@@ -86,4 +86,11 @@ html {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   position: absolute;
+  will-change: left;
+}
+
+/* Add accessible focus styles */
+:focus-visible {
+  outline: 2px solid #eab308;
+  outline-offset: 2px;
 }
